--- a/scss/elements/_social-area.scss
+++ b/scss/elements/_social-area.scss
@@ -12,6 +12,7 @@
             font-weight: 500;
             font-size: 14px;
             line-height: 20px;
+            padding-right: 0;
         }
     }
     .social{
@@ -42,6 +43,10 @@
             }
         }
     }
+}
+
+.home-content-right {
+    margin-left: 48% !important;
 }
 
 
