--- a/scss/elements/banner.scss
+++ b/scss/elements/banner.scss
@@ -88,6 +88,7 @@
         line-height: 28px;
         color: rgba(255, 255, 255, 0.6);
         margin-bottom: 33px;
+        padding-right: 32px;
     }
 }
 @media (max-width: 350px) {
@@ -178,6 +179,38 @@
 @keyframes rotateIt2 {
     to {
       transform: rotate(360deg);
+    }
+}
+.section-wrapper .popup-close .close-btn {
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    height: 19px;
+    justify-content: center;
+    position: relative;
+    width: 30px;
+    padding: 10px;
+    background: #1A1A1A;
+    box-shadow: rgb(18 18 18) 0px 4px 33px;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: .3s;
+    &:hover{
+        background: rgb(220, 53, 69);
+    }
+    &::before{
+        width: 30% !important;
+        margin-left: -5px;
+        margin-right: 7px;
+    }
+    &::after{
+        width: 30% !important;
+        margin-left: -5px;
+        margin-right: 7px;
     }
 }
 
