--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,22 @@
- 
+/*=======================
+======Index Number=======
+=========================*/
+/*
 
+1.about
+2.root.scss
+3.banner
+4.button
+5.service
+6.resum-section
+7.blog
+8.blog-details
+9.contact
+10.social-area
+11.nice-scroll
+12.white-verson
 
+*/
 
 
 /*style hear*/
@@ -14,4 +30,5 @@
 @import'elements/blog-details';
 @import'elements/contact';
 @import'elements/social-area';
+@import'elements/nice-scroll';
 @import'elements/white-version';
