--- a/scss/elements/_service.scss
+++ b/scss/elements/_service.scss
@@ -101,7 +101,7 @@ box-shadow: 0px 4px 33px #121212;
             max-width: max-content;
             margin: 30px auto 0 auto;
             padding: 15px 29px;
-            border-radius: 10px;
+            border-radius: 0;
         }
     }
 }
