--- a/scss/elements/root.scss
+++ b/scss/elements/root.scss
@@ -773,6 +773,15 @@
     padding: 30px 0 0 0;
     max-width: 1700px;
     margin: auto;
+    @media screen and (max-width: 1900px) {
+      max-width: 90%;
+    }
+  }
+
+  .rts-easy-contact-area{
+    @media screen and (max-width: 1199px) {
+      display: none;
+    }
   }
   
   .navbar .navbar-brand span {
@@ -822,7 +831,7 @@
   
   @media (max-width: 767.98px) {
     .navbar .navbar-brand img {
-      width: 90px;
+      width:120px;
     }
   
     .navbar .navbar-menu {
@@ -977,8 +986,10 @@
     font-weight: 700;
     letter-spacing: 1px;
     margin-bottom: 25px;
+    @media screen and (max-width:555px) {
+      margin-bottom: 0;
+    }
   }
-
 
   .home-area .home-name span{
     display: block;
@@ -987,6 +998,13 @@
     font-size: 72px;
     line-height: 80px;
     margin-top: -15px;
+    @media screen and (max-width:767px) {
+      font-size: 57px;
+    }
+    @media screen and (max-width:555px) {
+      font-size: 36px;
+      margin-top: -25px;
+    }
   }
 
   .home-area .home-name .color-name{
@@ -995,6 +1013,9 @@
     line-height: 85px;
     letter-spacing: 0.05em;
     color: #DC3545;
+    @media screen and (max-width:555px) {
+      font-size: 26px;
+    }
   }
   
   span.color-name{
@@ -1069,6 +1090,9 @@
       margin-left: auto;
       justify-content: center;
       margin-right: -20px;
+      @media screen and (max-width: 1199px) {
+        justify-content: flex-end;
+      }
     }
 
     #navbarSupportedContent li:hover:after{
@@ -1732,15 +1756,24 @@
     border-bottom: 1px solid transparent;
     color: #cecece;
     cursor: pointer;
-    font-size: 22px;
-    font-weight: 400;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
     letter-spacing: 0.3px;
     position: relative;
     transition: all 0.1s ease-in-out;
+    padding: 8px 25px;
+    background: rgb(26, 26, 26);
+    transition: .3s;
+    box-shadow: 0px 4px 33px #121212;
+    &:hover{
+      background: rgb(220, 53, 69);
+      color: #fff;
+    }
   }
   
   .portfolio-section .filter-control>li:not(:last-child) {
-    margin-right: 16px;
+    margin-right: 10px;
   }
   
   .portfolio-section .filter-control>li:hover:before,
@@ -1750,6 +1783,7 @@
     height: 1px;
     position: absolute;
     width: 100%;
+    display: none;
   }
   
   .portfolio-section .portfolio-grid .portfolio-wrapper {
@@ -1781,7 +1815,7 @@
   
   .portfolio-section .portfolio-grid .portfolio-wrapper .item-content {
     bottom: 30px;
-    left: 30px;
+    left: 40px;
     opacity: 0;
     position: absolute;
     transition: all 0.15s ease-in-out;
@@ -1799,6 +1833,7 @@
     font-size: 24px;
     font-weight: 500;
     line-height: 1.8;
+    margin-bottom: -6px;
   }
   
   .portfolio-section .portfolio-grid .portfolio-wrapper .item-content .content-more {
@@ -1966,7 +2001,7 @@
   
   .contact-section .contact-form .form-group .form-control,
   .contact-section .contact-form .form-group .form-control::placeholder {
-    color: #777;
+    color: rgb(202, 202, 202);
   }
   
   .contact-section .contact-form .form-group .form-control:focus {
@@ -2327,5 +2362,17 @@
 
 .modal{
   z-index: 9999 !important;
+}
+
+
+
+.row-40{
+  --bs-gutter-x: 1.8rem;
+    --bs-gutter-y: 0;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(var(--bs-gutter-y) * -1);
+    margin-right: calc(var(--bs-gutter-x) * -0.5);
+    margin-left: calc(var(--bs-gutter-x) * -0.5);
 }
 
